完成snake静态页面

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TS & webpack</title>
+  <title>贪吃蛇</title>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="main">
+    <div id="stage">
+      <div id="snake">
+        <div></div>
+      </div>
+      <div id="food">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <div id="score-panel">
+      <div>
+          SCORE:<span id="score">0</span>
+      </div>
+      <div>
+        Level:<span id="score">1</span>
+      </div>
+    </div>
+
+  </div>
 </body>
 
 </html>
