完成贪吃蛇的调试

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           SCORE:<span id="score">0</span>
       </div>
       <div>
-        Level:<span id="score">1</span>
+        Level:<span id="level">1</span>
       </div>
     </div>
 
